# Flex-Backend

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTINUE.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  frontendRequirements.md  pyproject.toml  requirements.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
adr/: 0001-clean-architecture-modular-monolith.md  0002-mock-payment-provider-first.md  0003-jwt-access-token-only.md  0004-event-delivery-in-process-sync.md  README.md  template.md
alembic/: env.py
alembic/versions/: 0001_create_users_table.py
src/: main.py
src/api/: app.py  docs.md  exception_handlers.py  middleware.py  routes.py
src/core/: config.py  db.py  docs.md  logging.py
src/modules/auth/: docs.md
src/modules/auth/application/: use_cases.py
src/modules/auth/domain/: entities.py  ports.py  role.py  value_objects.py
src/modules/auth/infrastructure/: orm.py  repositories.py  security.py
src/modules/auth/interfaces/: dependencies.py  router.py  schemas.py
src/modules/booking/: docs.md
src/modules/notification/: docs.md
src/modules/payment/: docs.md
src/modules/property/: docs.md
src/shared/: docs.md  errors.py  events.py  ids.py  money.py  pagination.py  time.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: conftest.py  test_auth.py  test_health.py
tests/unit/: test_shared_events.py  test_shared_ids.py  test_shared_money.py  test_shared_pagination.py  test_shared_time.py
tests/unit/auth/: fakes.py  test_security.py  test_use_cases.py  test_user_entity.py  test_value_objects.py
